--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -50,7 +50,7 @@ jobs:
     needs:
       - build-website
 
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
 
     environment:
       name: github-pages
