pcb: update asset gen config files

--- a/pcb/stm32g4-usbd-devboard/config.yml
+++ b/pcb/stm32g4-usbd-devboard/config.yml
@@ -1,25 +1,22 @@
 ---
-projects:
-  - file: stm32g4-usbd-devboard.kicad_pro
-    pcb-render:
-      enable: true
-      include-dnp: true
-      width: 1840
-      height: 4320
-      zoom: 0.75
-      pan:
-        y: 0.8
-      scales:
-        - 480
-        - 720
-        - 1080
-      sides:
-        - top
-        - bottom
-    pcb-ibom:
-      enable: true
-    pcb-gerber:
-      enable: true
-      copy-pattern: gerber/*.zip
-    sch-export-pdf:
-      enable: true
+project-file: stm32g4-usbd-devboard.kicad_pro
+pcb-render:
+  include-dnp: true
+  width: 1840
+  height: 4320
+  zoom: 0.75
+  pan:
+    y: 0.8
+  scales:
+    - 480
+    - 720
+    - 1080
+  sides:
+    - top
+    - bottom
+pcb-ibom:
+  enable: true
+pcb-gerber:
+  copy-pattern: gerber/*.zip
+sch-export-pdf:
+  enable: true
